Add box-sizin: border-box

--- a/src/assets/CSS/reset.css
+++ b/src/assets/CSS/reset.css
@@ -28,6 +28,9 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+*{
+	box-sizing: border-box;
+}
 body {
 	line-height: 1;
 }
