--- a/src/assets/CSS/form.css
+++ b/src/assets/CSS/form.css
@@ -7,6 +7,7 @@
 
     flex-direction: column;
 }
+
 .container .alvo{
     border: 10px solid var(--cor3);
     border-radius: 50%;
@@ -92,14 +93,16 @@ form  button:hover{
         display: flex;
         justify-content: space-between;
         flex-direction: row;
+        align-items: center;
     }
+    
 
     .container .alvo{
         border: 10px solid var(--cor3);
         border-radius: 50%;
-        max-width: 600px;
+        
         order: 2;
-        width: 45%;
+        max-width: 45%;
     }
     form{
         width: 45%;
